--- a/bluepin/Base.lproj/Main.storyboard
+++ b/bluepin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="T8G-Qp-GXs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -45,6 +45,9 @@
                                             <constraint firstAttribute="height" constant="32" id="lRA-73-JVs"/>
                                         </constraints>
                                         <state key="normal" image="Add-new"/>
+                                        <connections>
+                                            <action selector="plusBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cGl-5K-GyQ"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CvJ-Zj-SnG">
                                         <rect key="frame" x="8" y="30" width="32" height="32"/>
@@ -66,9 +69,8 @@
                                     <constraint firstItem="IIY-C2-ZXn" firstAttribute="centerY" secondItem="CvJ-Zj-SnG" secondAttribute="centerY" id="wEX-ru-EUe"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sTC-v1-fBM">
-                                <rect key="frame" x="0.0" y="73" width="375" height="594"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sTC-v1-fBM">
+                                <rect key="frame" x="0.0" y="75" width="375" height="592"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="85" id="7T8-kW-jFL">
@@ -167,9 +169,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="sTC-v1-fBM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0Sp-wH-ng3"/>
+                            <constraint firstItem="sTC-v1-fBM" firstAttribute="top" secondItem="ZKl-2j-i0w" secondAttribute="bottom" id="40M-2Y-yCf"/>
                             <constraint firstItem="ZKl-2j-i0w" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6az-Hk-BE7"/>
+                            <constraint firstItem="sTC-v1-fBM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6jX-9D-zHV"/>
                             <constraint firstItem="ZKl-2j-i0w" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9ql-v4-CF3"/>
                             <constraint firstItem="ZKl-2j-i0w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UN5-ua-OHc"/>
+                            <constraint firstItem="sTC-v1-fBM" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Z4X-y6-mTR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
